--- a/emerging_media/index.html
+++ b/emerging_media/index.html
@@ -90,7 +90,7 @@
 
     <img src="images/SJSU_professor.jpg" alt="An SJSU professor introducing students to VDTs in 1977." class="hero-image">
 
-    <p class="caption">Clyde Lawrence, a journalism professor at San Jose State University shows two graduate students the journalism department's new $20,000 electronic editing system featuring 2 VDTs in 1977. (Photo via San Jose State University Archives)</p>
+    <p class="caption">Clyde Lawrence, a journalism professor at San Jose State University shows two graduate students the journalism department's new $20,000 electronic editing system featuring two VDTs in 1977. (Photo via San Jose State University Archives)</p>
 
   <div class="container">
 
